 * Fix rare Lua error message spam at end of game
 * Fix round score and other info numbers messing up after screen resize
 * Fix kamikaze bonus not being shown

Campaigns and missions:
 * A Classic Fairytale: Fix clan membership of princess in some missions
 * A Classic Fairytale, Mission 5: Tribe was not in same clan as Natives, screwing up stats a bit
 + A Space Adventure, final mission: Terrain types are easier to distinguish
 * A Space Adventure, Searching in the Dust: Fix display error when destroying device crate
 * A Space Adventure, Searching in the Dust: Don't take away control right above the pit near Sandy
 * A Space Adventure, Hard Flying: Fix incorrect recorded time, was 6 seconds more than reality
 * A Space Adventure: Fix clan membership of PAotH in main Death Planet mission
 * A Space Adventure, final mission: Don't say "Missed" or "Yes, Sir!" when inappropriate
 * The Great Escape: Infinite attack mode did not work
 * Shotgun/Sniper Rifle Target Practicse: Suppress “X remaining” message
 * Basic Movement Training: Back jumps should be easier now
 * Fix resurrection animation appearing at wrong position for some missions and styles

Content:
 + New Sudden Death water texture for CrazyMission theme
 + Add dust flakes for Cheese and CrazyMission themes
 * Fix repeating sun in Hoggywood theme

Server:
 + Add “/help” chat command for command help
 + Can now clear room greeting by using chat command “/greeting” without arguments
 + Many new error and status messages for improved usability
 * Fix many server messages being not translated

Lua API:
 * Deprecation: Setting TurnTimeLeft/ReadyTimeLeft directly is deprecated and will become useless in future. Use the setter functions below
 + New call: SetTurnTimeLeft(newTurnTimeLeft): Set remaining turn time
 + New call: SetReadyTimeLeft(newReadyTimeLeft): Set remaining ready time
 + New call: Retreat(time [, respectGetAwayTimeFactor): Force current turn into retreating mode