@@ -90,6 +90,7 @@ Space Invasion:
 Campaigns and missions:
  * A Classic Fairytale: Fix clan membership of princess in some missions
  * A Classic Fairytale, Mission 5: Tribe was not in same clan as Natives, screwing up stats a bit
+ * A Space Adventure, Hard Flying: Display current flying time next to team bar
  + A Space Adventure, final mission: Terrain types are easier to distinguish
  * A Space Adventure, Searching in the Dust: Fix display error when destroying device crate
  * A Space Adventure, Searching in the Dust: Don't take away control right above the pit near Sandy
